# excavator-mpm

./: .gitignore  README.md  simulate_excavator.py  simulate_excavator_ros2.py
excavator_mpm/: package.xml  setup.cfg  setup.py
excavator_mpm/assets/: arm.usd
excavator_mpm/excavator_mpm/: simulate_excavator.py  simulate_excavator_ros2.py  trajectory_sender.py
excavator_mpm/launch/: excavator.launch.py  excavator_full.launch.py
